# hdmi-switch-cli

./: .gitignore  LICENSE  Makefile  README.md  flake.nix
example/configuration/: configuration.yaml
hdmi-switch/: Cargo.toml
hdmi-switch/src/: configuration.rs  main.rs  utils.rs
