[package]
name = "hdmi-switch"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telnet = "0.2.1"
structopt = "0.3.26"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
indexmap = "1.6.0"
